@@ -21,6 +21,6 @@ ref-and-id.json                              6          0     0
 ref.json                                    12          0     0
 short-circuit.json                          20          0     0
 unknownKeyword.json                          4          0     0
-vocabulary.json                              3          0     0
+vocabulary.json                              5          0     0
 ---------------------------------------------------------------
-TOTAL                                      914          0     0
+TOTAL                                      916          0     0
